2011-04-28  Stipe Tolj  <stolj at kannel.org>
    * gw/smsc/smsc_http.c: fixing removed portno assignment in r4894.
      Thanks to Rene Kluwen for spotting the defect.
      [Message-Id: <030b01cc052c$60054600$200fd200$@kluwen@chimit.nl>]
    
2011-04-18 Alexander Malysh <amalysh at kannel.org>
    * handle INTERIX differences in the configure.

2011-04-18 Alexander Malysh <amalysh at kannel.org>
    * removed INTERIX check from gwlib source and put it into configure.

2011-04-18 Alexander Malysh <amalysh at kannel.org>
    * fixed memory leak.
      Thanks to Roman Shterenzon <romanbsd at yahoo.com> for this patch.

2011-04-07 Alexander Malysh <amalysh at kannel.org>
    * fixed kannel monitor web interface after r4897.
      This close #594.
      Thanks to Roland Discein.

2011-04-07 Alexander Malysh <amalysh at kannel.org>
    * applied patch that adds support for limiting listening for smsbox connections
      to specific interface.
      Thanks to Roman Shterenzon <romanbsd at yahoo.com>.

2011-04-05 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c: fixed last commit.

2011-04-05 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_smscconn.c, gw/smscconn.c, gw/smscconn_p.h: apllied patch that implements
      speed/throughput meters on a per-smsc basis.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> for this patch.

2011-03-30 Alexander Malysh <amalysh at kannel.org>
    * applied patch that fixes some issues for HTTP-SMSC:
      1) added support for max-pending-submits , so that we don't eat all our
         file descriptors if we have much traffic
      2) changed open_sends from long to Counter, avoid race conditions
      3) start new sender_thread because otherwise we are unable to limit max pending
         submits and if throughput is set we block the whole bearerbox instead of only
         one SMSC
      4) changed shutdown sequence to run safe in parallel

2011-03-30 Alexander Malysh <amalysh at kannel.org>